--- a/StartupCarvaan/gradle/wrapper/gradle-wrapper.properties
+++ b/StartupCarvaan/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Sun Feb 28 12:59:51 IST 2021
+#Thu Mar 04 16:41:13 IST 2021
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-6.8-bin.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-6.8-all.zip
