--- a/StartupCarvaan/app/src/main/AndroidManifest.xml
+++ b/StartupCarvaan/app/src/main/AndroidManifest.xml
@@ -9,14 +9,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.StartupCarvaan">
-        <activity android:name=".Signup"></activity>
-        <activity android:name=".PrivacyPolicy" />
-        <activity android:name=".mainActivities.LoginActivity">
+        <activity android:name=".loginsignup.registerActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".PrivacyPolicy" />
+        <activity android:name=".loginsignup.loginActivity"
+            android:theme="@style/Theme.StartupCarvaan.Fullscreen">
         </activity>
         <activity android:name=".mainActivities.SplashScreen" />
         <activity android:name=".MainActivity"></activity>
