--- a/StartupCarvaan/app/src/main/AndroidManifest.xml
+++ b/StartupCarvaan/app/src/main/AndroidManifest.xml
@@ -9,12 +9,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.StartupCarvaan">
-        <activity android:name=".loginsignup.PhoneAuthActivity">
+        <activity android:name=".user.ProfileActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".loginsignup.PhoneAuthActivity">
         </activity>
         <activity android:name=".loginsignup.forgetpassword" />
         <activity android:name=".aboutshare.blogging" />
@@ -23,9 +25,7 @@
         <activity android:name=".mainActivities.PrivacyPolicy" />
         <activity
             android:name=".loginsignup.loginActivity"
-            android:theme="@style/Theme.StartupCarvaan.Fullscreen">
-
-        </activity>
+            android:theme="@style/Theme.StartupCarvaan.Fullscreen"></activity>
         <activity android:name=".mainActivities.SplashScreen" />
     </application>
 
