--- a/StartupCarvaan/app/build.gradle
+++ b/StartupCarvaan/app/build.gradle
@@ -65,4 +65,14 @@ dependencies {
     implementation 'com.pierfrancescosoffritti.androidyoutubeplayer:core:10.0.5'
 
     implementation 'androidx.browser:browser:1.2.0'
+
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation 'com.mikhaellopez:circularimageview:4.2.0'
+
+
+
+    implementation 'com.google.firebase:firebase-storage:16.0.4'
+
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+
 }
