--- a/StartupCarvaan/app/src/main/AndroidManifest.xml
+++ b/StartupCarvaan/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="recreate.india.main.startupcarvaan">
 
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -9,23 +10,25 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.StartupCarvaan">
-        <activity android:name=".user.ProfileActivity">
+        <activity android:name=".user.CreateProfile">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".loginsignup.PhoneAuthActivity">
-        </activity>
+        <activity android:name=".loginsignup.PhoneAuthActivity"></activity>
         <activity android:name=".loginsignup.forgetpassword" />
+        <activity android:name=".user.ProfileActivity">
+
+        </activity>
         <activity android:name=".aboutshare.blogging" />
         <activity android:name=".mainActivities.MainActivity" />
         <activity android:name=".loginsignup.registerActivity" />
         <activity android:name=".mainActivities.PrivacyPolicy" />
         <activity
             android:name=".loginsignup.loginActivity"
-            android:theme="@style/Theme.StartupCarvaan.Fullscreen"></activity>
+            android:theme="@style/Theme.StartupCarvaan.Fullscreen" />
         <activity android:name=".mainActivities.SplashScreen" />
     </application>
 
