--- a/StartupCarvaan/app/build.gradle
+++ b/StartupCarvaan/app/build.gradle
@@ -32,7 +32,7 @@ android {
 }
 
 dependencies {
-
+    compile files('libs/YouTubeAndroidPlayerApi.jar')
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
@@ -81,4 +81,5 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
+    implementation 'com.firebaseui:firebase-ui-firestore:7.1.1'
 }
