--- a/StartupCarvaan/app/src/main/AndroidManifest.xml
+++ b/StartupCarvaan/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="recreate.india.main.startupcarvaan">
-
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"></uses-permission>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,17 +10,22 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.StartupCarvaan">
         <activity android:name=".mainActivities.IntroSliderActivity"></activity>
-        <activity android:name=".user.CreateProfile">
+        <activity android:name=".user.CreateProfile"
+            android:parentActivityName=".user.ProfileActivity">
+
+        </activity>
+        <activity android:name=".loginsignup.PhoneAuthActivity" />
+        <activity android:name=".loginsignup.forgetpassword" />
+        <activity android:name=".user.ProfileActivity"
+            android:parentActivityName=".user.CreateProfile">
+        </activity>
+        <activity android:name=".aboutshare.blogging" />
+        <activity android:name=".mainActivities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".loginsignup.PhoneAuthActivity" />
-        <activity android:name=".loginsignup.forgetpassword" />
-        <activity android:name=".user.ProfileActivity" />
-        <activity android:name=".aboutshare.blogging" />
-        <activity android:name=".mainActivities.MainActivity" />
         <activity android:name=".loginsignup.registerActivity" />
         <activity android:name=".mainActivities.PrivacyPolicy" />
         <activity
@@ -28,5 +33,6 @@
             android:theme="@style/Theme.StartupCarvaan.Fullscreen" />
         <activity android:name=".mainActivities.SplashScreen" />
     </application>
-
+    <uses-feature android:name="android.hardware.camera"
+        android:required="false" />
 </manifest>
