--- a/StartupCarvaan/app/build.gradle
+++ b/StartupCarvaan/app/build.gradle
@@ -32,7 +32,6 @@ android {
 }
 
 dependencies {
-    compile files('libs/YouTubeAndroidPlayerApi.jar')
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
@@ -82,4 +81,6 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
 
     implementation 'com.firebaseui:firebase-ui-firestore:7.1.1'
+
+    implementation 'io.paperdb:paperdb:2.7.1'
 }
