--- a/StartupCarvaan/app/build.gradle
+++ b/StartupCarvaan/app/build.gradle
@@ -9,7 +9,7 @@ android {
 
     defaultConfig {
         applicationId "recreate.india.main.startupcarvaan"
-        minSdkVersion 17
+        minSdkVersion 19
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
@@ -83,4 +83,6 @@ dependencies {
     implementation 'com.firebaseui:firebase-ui-firestore:7.1.1'
 
     implementation 'io.paperdb:paperdb:2.7.1'
+
+    implementation 'com.razorpay:checkout:1.6.6'
 }
