--- a/StartupCarvaan/app/build.gradle
+++ b/StartupCarvaan/app/build.gradle
@@ -82,7 +82,8 @@ dependencies {
 
     implementation 'com.firebaseui:firebase-ui-firestore:7.1.1'
 
-    implementation 'io.paperdb:paperdb:2.7.1'
+    implementation 'io.paperdb:paperdb:2.7.1'   
 
     implementation 'com.razorpay:checkout:1.6.6'
+    implementation 'com.shreyaspatil:EasyUpiPayment:2.0'
 }
