--- a/StartupCarvaan/app/src/main/AndroidManifest.xml
+++ b/StartupCarvaan/app/src/main/AndroidManifest.xml
@@ -15,35 +15,38 @@
         android:roundIcon="@drawable/startupcarvaanlogo"
         android:supportsRtl="true"
         android:theme="@style/Theme.StartupCarvaan">
-        <activity android:name=".payments.payinActivity">
+        <activity android:name=".coin_exchange.buy_rci"></activity>
+        <activity android:name=".payments.UpiPaymentActivity"></activity>
+        <activity android:name=".payments.payinActivity" />
+        <activity android:name=".mainActivities.IntroSliderActivity" />
+        <activity
+            android:name=".user.CreateProfile"
+            android:parentActivityName=".user.ProfileActivity"></activity>
+        <activity
+            android:name=".loginsignup.PhoneAuthActivity"
+            android:parentActivityName=".loginsignup.loginActivity" />
+        <activity
+            android:name=".user.ProfileActivity"
+            android:parentActivityName=".user.CreateProfile">
+            \
+        </activity>
+        <activity
+            android:name=".aboutshare.blogging"
+            android:parentActivityName=".mainActivities.MainActivity"></activity>
+        <activity android:name=".mainActivities.MainActivity">
+
+        </activity>
+        <activity android:name=".mainActivities.PrivacyPolicy" />
+        <activity
+            android:name=".loginsignup.loginActivity"
+            android:theme="@style/Theme.StartupCarvaan.Fullscreen" />
+        <activity android:name=".mainActivities.SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".mainActivities.IntroSliderActivity"></activity>
-        <activity
-            android:name=".user.CreateProfile"
-            android:parentActivityName=".user.ProfileActivity"></activity>
-        <activity
-            android:name=".loginsignup.PhoneAuthActivity"
-            android:parentActivityName=".loginsignup.loginActivity">
-        </activity>
-        <activity
-            android:name=".user.ProfileActivity"
-            android:parentActivityName=".user.CreateProfile"></activity>
-        <activity
-            android:name=".aboutshare.blogging"
-            android:parentActivityName=".mainActivities.MainActivity"></activity>
-        <activity android:name=".mainActivities.MainActivity">
-        </activity>
-        <activity android:name=".mainActivities.PrivacyPolicy" />
-        <activity
-            android:name=".loginsignup.loginActivity"
-            android:theme="@style/Theme.StartupCarvaan.Fullscreen">
-        </activity>
-        <activity android:name=".mainActivities.SplashScreen" />
     </application>
 
 </manifest>
