--- a/StartupCarvaan/app/build.gradle
+++ b/StartupCarvaan/app/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'io.paperdb:paperdb:2.7.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'androidx.cardview:cardview:1.0.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
