--- a/StartupCarvaan/app/src/main/AndroidManifest.xml
+++ b/StartupCarvaan/app/src/main/AndroidManifest.xml
@@ -15,13 +15,14 @@
         android:roundIcon="@drawable/startupcarvaanlogo"
         android:supportsRtl="true"
         android:theme="@style/Theme.StartupCarvaan">
-        <activity android:name=".coin_exchange.buy_rci"></activity>
-        <activity android:name=".payments.UpiPaymentActivity"></activity>
+        <activity android:name=".CardViewActivity"></activity>
+        <activity android:name=".coin_exchange.buy_rci" />
+        <activity android:name=".payments.UpiPaymentActivity" />
         <activity android:name=".payments.payinActivity" />
         <activity android:name=".mainActivities.IntroSliderActivity" />
         <activity
             android:name=".user.CreateProfile"
-            android:parentActivityName=".user.ProfileActivity"></activity>
+            android:parentActivityName=".user.ProfileActivity" />
         <activity
             android:name=".loginsignup.PhoneAuthActivity"
             android:parentActivityName=".loginsignup.loginActivity" />
@@ -32,10 +33,8 @@
         </activity>
         <activity
             android:name=".aboutshare.blogging"
-            android:parentActivityName=".mainActivities.MainActivity"></activity>
-        <activity android:name=".mainActivities.MainActivity">
-
-        </activity>
+            android:parentActivityName=".mainActivities.MainActivity" />
+        <activity android:name=".mainActivities.MainActivity"></activity>
         <activity android:name=".mainActivities.PrivacyPolicy" />
         <activity
             android:name=".loginsignup.loginActivity"
