--- a/StartupCarvaan/app/src/main/AndroidManifest.xml
+++ b/StartupCarvaan/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         android:roundIcon="@drawable/startupcarvaanlogo"
         android:supportsRtl="true"
         android:theme="@style/Theme.StartupCarvaan">
+        <activity android:name=".Helppage"></activity>
         <activity android:name=".coin_exchange.buy_rci" />
         <activity android:name=".payments.UpiPaymentActivity" />
         <activity android:name=".payments.payinActivity" />
@@ -33,8 +34,9 @@
             android:parentActivityName=".mainActivities.MainActivity" />
         <activity android:name=".mainActivities.MainActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"></action>
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity android:name=".mainActivities.PrivacyPolicy" />
