--- a/StartupCarvaan/app/src/main/AndroidManifest.xml
+++ b/StartupCarvaan/app/src/main/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="recreate.india.main.startupcarvaan">
 
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <uses-feature
@@ -17,24 +17,18 @@
         android:roundIcon="@drawable/startupcarvaanlogo"
         android:supportsRtl="true"
         android:theme="@style/Theme.StartupCarvaan">
-        <activity android:name=".mainActivities.RecyclerActivity"></activity>
-        <activity android:name=".payments.payout">
-        </activity>
-        <activity android:name=".payments.payin">
-        </activity>
-        <activity android:name=".Helppage">
-        </activity>
+        <activity android:name=".Levels"></activity>
+        <activity android:name=".mainActivities.RecyclerActivity" />
+        <activity android:name=".payments.payout"></activity>
+        <activity android:name=".payments.payin"></activity>
+        <activity android:name=".Helppage"></activity>
         <activity android:name=".coin_exchange.buy_rci" />
-        <activity android:name=".mainActivities.IntroSliderActivity">
-        </activity>
-        <activity
-            android:name=".user.CreateProfile">
-        </activity>
+        <activity android:name=".mainActivities.IntroSliderActivity"></activity>
+        <activity android:name=".user.CreateProfile"></activity>
         <activity
             android:name=".loginsignup.PhoneAuthActivity"
             android:parentActivityName=".loginsignup.loginActivity" />
-        <activity
-            android:name=".user.ProfileActivity"/>
+        <activity android:name=".user.ProfileActivity" />
         <activity
             android:name=".aboutshare.blogging"
             android:parentActivityName=".mainActivities.MainActivity" />
@@ -49,9 +43,10 @@
         <activity
             android:name=".loginsignup.loginActivity"
             android:theme="@style/Theme.StartupCarvaan.Fullscreen" />
-        <activity android:name=".mainActivities.SplashScreen">
-        </activity>
-        <activity android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
-            android:theme="@style/Base.Theme.AppCompat"/>
+        <activity android:name=".mainActivities.SplashScreen"></activity>
+        <activity
+            android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
+            android:theme="@style/Base.Theme.AppCompat" />
     </application>
+
 </manifest>
