--- a/StartupCarvaan/app/src/main/AndroidManifest.xml
+++ b/StartupCarvaan/app/src/main/AndroidManifest.xml
@@ -26,12 +26,14 @@
         <activity android:name=".Helppage" />
         <activity android:name=".coin_exchange.buy_rci" />
         <activity android:name=".mainActivities.IntroSliderActivity" />
-        <activity android:name=".user.CreateProfile" />
+        <activity android:name=".user.CreateProfile"
+            android:theme="@style/MyTheme"/>
         <activity
             android:name=".loginsignup.PhoneAuthActivity"
             android:parentActivityName=".loginsignup.loginActivity" />
         <activity android:name=".user.ProfileActivity"
-            android:parentActivityName=".mainActivities.MainActivity"/>
+            android:parentActivityName=".mainActivities.MainActivity"
+            android:theme="@style/MyTheme"/>
         <activity
             android:name=".aboutshare.blogging"
             android:parentActivityName=".mainActivities.MainActivity" />
