--- a/StartupCarvaan/app/src/main/AndroidManifest.xml
+++ b/StartupCarvaan/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
         <activity android:name=".user.Transactions" >
 
         </activity>
-        <activity android:name=".coin_exchange.rci_exchange" />
+        <activity android:name=".coin_exchange.AboutRCI" />
         <activity android:name=".Levels" />
         <activity android:name=".mainActivities.RecyclerActivity" />
         <activity android:name=".payments.payout" />
