--- a/StartupCarvaan/app/src/main/AndroidManifest.xml
+++ b/StartupCarvaan/app/src/main/AndroidManifest.xml
@@ -9,9 +9,8 @@
         android:roundIcon="@drawable/startupcarvaanlogo"
         android:supportsRtl="true"
         android:theme="@style/Theme.StartupCarvaan">
-        <activity android:name=".instamojo">
+        <activity android:name=".instamojo"/>
 
-        </activity>
         <activity android:name=".user.Transactions" >
 
         </activity>
@@ -19,7 +18,12 @@
         <activity android:name=".Levels" />
         <activity android:name=".mainActivities.RecyclerActivity" />
         <activity android:name=".payments.payout" />
-        <activity android:name=".payments.payin" />
+        <activity android:name=".payments.payin" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity android:name=".Helppage" />
         <activity android:name=".coin_exchange.buy_rci" />
         <activity android:name=".mainActivities.IntroSliderActivity" />
@@ -43,10 +47,6 @@
         <activity
             android:name=".mainActivities.SplashScreen"
             android:theme="@style/MyTheme">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
